# resp-result

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: check.yml  pubilsh.yml
code-gen/: Cargo.toml
code-gen/src/: lib.rs
code-gen/src/ast_nodes/: function_loader.rs  mod.rs
code-gen/src/derive_resp_error/: mod.rs
code-gen/src/derive_resp_error/codegen/: mod.rs
code-gen/src/derive_resp_error/input/: mod.rs  variant_info.rs
code-gen/src/derive_resp_error/structure/: http_code.rs  mod.rs
code-gen/src/proc_resp_result/: function_loader.rs  mod.rs
examples/: actix.rs  axum.rs  expand.rs
src/: expect_ext.rs  lib.rs
src/config/: mod.rs  resp.rs  serde.rs  status_signed.rs
src/convert/: mod.rs
src/convert/from_request/: actix.rs  axum.rs  mod.rs
src/extra_flag/: effect.rs  flag_wrap.rs  flags.rs  mod.rs
src/resp_body/: mod.rs
src/resp_error/: mod.rs
src/resp_extra/: ad_hoc.rs  extra_resp_result.rs  extra_warp.rs  mod.rs  resp_extra.rs  serde_data.rs
src/resp_result/: mod.rs  serde.rs  to_response.rs  try_macro.rs  try_op.rs
src/resp_result/to_response/: actix.rs  axum.rs  mod.rs
