[package]
name = "resp-result"
version = "0.6.0"
edition = "2021"
authors = ["FrozenString<frozenstringstable@gmail.com>"]
description = "Help Struct For Axum or Actix Response"
homepage = "https://github.com/Goodjooy/resp-result"
documentation = "https://docs.rs/resp-result"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "axum"
required-features = ["axum-full", "tracing"]

[[example]]
name = "actix"
required-features = ["actix-full", "nightly_try_v2"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
axum-full = ["extra-error", "for-axum"]
actix-full = ["extra-error", "for-actix"]
log = ["tracing", "trace?/log"]
tracing = ["dep:trace", "dep:tracing-unwrap"]
extra-error = []
for-axum = ["dep:axum"]
for-actix = ["dep:actix-web"]
nightly_try_v2 = []

[dependencies]
serde_json = "1"
http = "0.2"
once_cell = "1"
thiserror = "1.0.37"
trace = { version = "0.1.37", package = "tracing", optional = true }
tracing-unwrap = { version = "0.10.0", features = [
    "log-location"
], optional = true }
futures = "0.3"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.axum]
optional = true
version = "0.6"

[dependencies.actix-web]
optional = true
version = "^4"

[dependencies.mime]
version = "0.3"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["full"] }
simple-log = "1.6.0"
tracing-subscriber = { version = "0.3.16", features = [
    "fmt",
    "registry",
    "env-filter"
] }
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.3.4", features = ["trace"] }
