workspace = { members = ["code-gen"] }

[package]
name = "axum-resp-result"
version = "0.7.1"
edition = "2021"
authors = ["FrozenString<frozenstringstable@gmail.com>"]
description = "Help Struct For Axum Response"
homepage = "https://github.com/Goodjooy/axum-resp-result"
documentation = "https://docs.rs/resp-result"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "axum"
required-features = ["tracing"]

[[example]]
name="expand"
required-features = ["tracing"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
log = ["tracing", "trace?/log"]
tracing = ["dep:trace", "dep:tracing-unwrap"]
extra-error = ["axum-resp-result-macro/extra-error"]
nightly_try_v2 = []

[dependencies]
serde_json = "1"
http = "1"
once_cell = "1"
thiserror = "1.0.37"
trace = { version = "0.1.37", package = "tracing", optional = true }
tracing-unwrap = { version = "0.10.0", features = [
    "log-location",
], optional = true }
futures = "0.3"
axum-resp-result-macro = { version = "0.7.0" }

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.axum]
version = "0.7"

[dependencies.mime]
version = "0.3"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["full"] }
simple-log = "1.6.0"
tracing-subscriber = { version = "0.3.16", features = [
    "fmt",
    "registry",
    "env-filter",
] }
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.5", features = ["trace"] }
thiserror = "1.0.37"
