[package]
name = "axum-resp-result-macro"
version = "0.6.3"
edition = "2021"
authors = ["FrozenString<frozenstringstable@gmail.com>"]
description = "Help Struct For Axum Response"
homepage = "https://github.com/Goodjooy/resp-result"
documentation = "https://docs.rs/resp-result"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full"] }
