[package]
name = "axum-resp-result-macro"
version = "0.7.0"
edition = "2021"
authors = ["FrozenString<frozenstringstable@gmail.com>"]
description = "Help Struct For Axum Response"
homepage = "https://github.com/Goodjooy/resp-result"
documentation = "https://docs.rs/resp-result"
license = "MIT"

[lib]
proc-macro = true



[features]
extra-error=[]
[dependencies]
darling = "0.20"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
http = "1"
heck = "0.5.0"
